Added Live Variable Change in HTML

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <title id="title">Home</title>
     <script type="module" src="http://localhost/webprojekte/reactionsite/framework/js/main.js"></script>
     <link id="component_css" rel="stylesheet" href="">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/siteMenu.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
 <body>
-    <div id="root"></div>
+    <div id="body">
+        <div id="siteMenu"></div>
+        <div id="content">
+            <header id="header"></header>
+            <main id="main"></main>
+            <footer id="footer"></footer>
+        </div>
+    </div>
 </body>
 </html>
