Begin Dialog Frame

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title id="title">Home</title>
     <script type="module" src="http://localhost/webprojekte/reactionsite/framework/js/main.js"></script>
     <link id="component_css" rel="stylesheet" href="">
+    <link id="dialog_css" rel="stylesheet" href="">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/siteMenu.css">
     <link rel="stylesheet" href="assets/css/header.css">
@@ -19,6 +20,9 @@
             <main id="main"></main>
             <footer id="footer"></footer>
         </div>
+    </div>
+    <div id="dialog">
+
     </div>
 </body>
 </html>
