--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/siteMenu.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/dialog.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
@@ -22,7 +23,18 @@
         </div>
     </div>
     <div id="dialog">
-
+        <div id="dialog_header">
+            <button id="dialog_close">Close</button>
+        </div>
+        <div id="dialog_content">
+        </div>
+        <div id="dialog_actionbar">
+            <div>
+                <button id="dialog_back">Back</button>
+                <button id="dialog_next">Next</button>
+                <button id="dialog_finish">Finish</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
